# coral-language

./: .gitignore  AGENTS.md  ALPHA_TASKS.md  COMPREHENSIVE_EVALUATION.md  COMPREHENSIVE_REVIEW_REPORT.md.bak  Cargo.toml  IMMEDIATE_TODO.md  INTRODUCTION.md  Makefile  README.md  REMEDIATION_PLAN.md  REMEDIATION_TRACKER.md  SELF_HOSTING_READINESS_ASSESSMENT.md  TECHNICAL_REVIEW_2026.md  bisect_error.py  clarify.md  find_errors.py  find_errors2.py  full_language_no_store  output.ll  prompt.txt  syntax.coral  test_comprehensive_syntax.coral  test_error_handling.coral
.cargo/: config.toml
.github/: arch.instructions.md
.quinn/: tasks.json
benchmarks/: closures.coral  compiler_comparison.sh  fibonacci.coral  for_iteration.coral  list_ops.coral  map_ops.coral  math_compute.coral  matrix_mul.coral  pattern_matching.coral  recursion.coral  results_debug_binary.json  results_release_binary.json  run_benchmarks.py  store_ops.coral  (+2 more)
fuzz/: Cargo.toml
fuzz/corpus/fuzz_lexer/: data_pipeline.coral  fizzbuzz.coral  traits_demo.coral
fuzz/corpus/fuzz_parser/: chat_server.coral
fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs
runtime/: Cargo.toml
runtime/src/: actor.rs  actor_ops.rs  allocator.rs  arithmetic.rs  bytes_ops.rs  closure_ops.rs  crypto_ops.rs  cycle_detector.rs  encoding_ops.rs  error_ffi.rs  http_ops.rs  io_ops.rs  json_ops.rs  lib.rs  list_ops.rs  map_hash.rs  map_ops.rs  math_ops.rs  memory_ops.rs  metrics.rs  module_registry.rs  nanbox.rs  nanbox_ffi.rs  random_ops.rs  rc_deferred.rs  rc_ops.rs  regex_ops.rs  remote.rs  simd_string.rs  store_old.rs  string_ops.rs  symbol.rs  tagged_ops.rs  time_ops.rs  udp_ops.rs  weak_ref.rs
runtime/src/store/: binary.rs  config.rs  engine.rs  ffi.rs  index.rs  jsonl.rs  mmap.rs  mod.rs  query.rs  secondary_index.rs  transaction.rs  uuid7.rs  wal.rs
(+308 files in other folders)
