[workspace]
members = ["runtime", "coral-lsp"]
resolver = "2"

[package]
name = "coralc"
version = "0.1.0"
edition = "2024"
default-run = "coralc"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
inkwell = { version = "0.4", features = ["llvm16-0"] }
itertools = "0.13"
thiserror = "1.0"
tempfile = "3.12"
toml = "0.8"

[dev-dependencies]
pretty_assertions = "1.4"
insta = { version = "1.40", features = ["yaml"] }
serde_json = "1.0"
