[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "rc_stress"
path = "src/bin/rc_stress.rs"

[[bin]]
name = "cycle_bench"
path = "src/bin/cycle_bench.rs"

[features]
default = []
metrics = []

[dependencies]
libc = "0.2"
serde_json = "1"
base64 = "0.22"
regex = "1"
